# pypelay

./: 404.html  CHANGELOG.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
docs/: index.md  installation.md  new_vessel.md  ref.md  reference.md  spreadsheets.md  stinger.md  user_guide.md
docs/stylesheets/: extra.css
installation/: index.html
reference/: index.html
search/: search_index.json
spreadsheets/: index.html
src/pypelay/: S1200_ga.dxf  S1200_rollers.bak  S1200_rollers.dxf  S1200_stcfg.dxf  S2000_ga.dxf  S2000_rollers.bak  S2000_rollers.dxf  S3500_ga.dxf  __init__.py  drawings.py  dynamics.py  environment.xlsx  geom.py  options.xlsx  prelim.py  raos.xlsx  s1200_configs.xlsx  s3500_configs.xlsx  static_summary.xlsx  stinger.py  wave_search.py  waves.py
src/pypelay.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
stylesheets/: extra.css
user_guide/: index.html
