[project]
name = "pypelay"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ezdxf>=1.3.5",
    "matplotlib>=3.10.0",
    "mkdocs-material>=9.6.5",
    "mkdocstrings-python>=1.16.2",
    "numpy>=2.2.1",
    "openpyxl>=3.1.5",
    "orcfxapi>=11.5.1",
    "pandas>=2.2.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
