[project]
name = "pypelay"
version = "0.2.2"
description = "Automated S-lay analysis using Orcaflex"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ezdxf>=1.3.5",
    "matplotlib>=3.10.0",
    "mkdocs-material>=9.6.5",
    "mkdocstrings-python>=1.16.2",
    "numpy>=2.2.1",
    "openpyxl>=3.1.5",
    "orcfxapi>=11.5.1",
    "pandas>=2.2.3",
    "tabulate>=0.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
